test/fixtures/compile/class.throws.error.notry.error
The error 'SyntaxError' is not consumed at line 20